# regen

./: .gitignore  .gitmodules  LICENSE.txt  README.rst  requirements.txt  requirements_test.txt  setup.py
examples/: codegen.py  main.cpp  reflect.hpp
examples/common/: test_enum.cpp
examples/common/cmake/: regen.cmake
examples/common/include/: bitmask.hpp  enum.hpp  util.hpp
examples/e2str/: .gitignore  Makefile
examples/e2str/samefile/: CMakeLists.txt  Makefile  bitmask.hpp  codegen.cmake  codegen.py  enum.hpp  main.cpp  myenum.hpp  myenum.hpp.orig  regen.cmake  regen.py  test_enum.cpp  util.hpp
examples/reflect/: CMakeLists.txt  bitmask.hpp  enum.hpp  imgui.hpp  main.cpp  main.gen.cpp  main.gen.hpp  main.hpp  regen.cmake  regen.py  serialize.hpp  util.hpp
src/c4/regen/: __init__.py  clang_utils.py  cppreflect.py  main.py  util.py
test/: test_clang_utils.py  test_regen.py
tools/: testclang.sh  testwithcpplib.cpp  testwithlib.cpp
tools/clang-build/: .gitignore  CMakeLists.txt  D20492.diff  testnolib.cpp  testwithcpplib.cpp  util.cmake
tools/regen++/: regen.hpp
tools/regen-plugin/: config.yml  regen.yml
tools/regen-plugin/src/: CMakeLists.txt  regen.cpp
tools/regen-tool/: CMakeLists.txt  RegenTool.cpp  regenxx
tools/regen-tool/regenxx/: regen.hpp
